# meta

./: Dockerfile  README.md  main.py  pyproject.toml  service.py
.github/workflows/: docker-build.yml
model/: attribute_mapping.py  fuel_type.py  label_value.py  response.py  ship_type.py  time_zone.py
